--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,14 @@ environment:
 dependencies:
   get: ^3.4.4
   get_storage: ^1.3.0
+  simple_gravatar: ^1.0.5
   flutter_sheet_localization: ^2.0.0
+  firebase_core:
+  firebase_analytics:
+  flutter_localizations:
+    sdk: flutter
+  cloud_firestore:
+  firebase_auth:
   flutter:
     sdk: flutter
 
@@ -50,9 +57,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/default.png
+    - assets/images/defaultDark.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
